# HistopathologyAugmentationResearch

./: .gitignore  README.md  environment.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
classification/: config.py  dataloader.py  model.py  test.py
data/test_data/annotations/dataset_name/: test_image.xml
data/test_data/segmentations/dataset_name/: test_image.xml
libhaa/: __init__.py
libhaa/base/: __init__.py  blending.py  config.py  convert_annotations_to_mask.py  io.py  loaders.py  parsing.py
libhaa/classification/: config.py  dataloader.py  model.py
libhaa/scripts/: __init__.py  build_collection.py  classify.py  cut_patches.py  generate_dataset.py  generate_mask_from_xml.py  segment.py
libhaa/segmentation/: __init__.py  dataloader.py  model.py
model_training/classification/: config.py  model.py  train.py
model_training/seg/: prototype.py
