[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["libhaa"]

[project]
name = "libhaa"
authors = [
    {name = "Artur Jurgas", email = "arjurgas@outlook.com"},
]
version = "0.0.2"
description = "Package for WSI augmentation with artifacts."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["histopathology", "image-augmentation"]
license = {text = "Under review"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "Pillow",
    "numpy < 2.0",
    "opencv-python",
    "scipy",
    "staintools",
    "spams-bin",
    "ruamel.yaml",
    # "pyvips-binary", # not working with openslideload
    "pyvips",
    "openslide-bin",
    "openslide-python",
]


[project.optional-dependencies]
all = [
    "libhaa[histo-seg]",
    "libhaa[histo-class]",
]

histo-seg = [
    "torch",
    "torchio",
    #...
]
histo-class = [
    "torch",
    "pytorch_lightning",
    "pandas",
    "torchmetrics",
    "palettable",
    "mpltex",
    #...
]
